# Rust_WB

./: Cargo.toml  backup.bat  marvel.csv  task1.rs  task10.rs  task11.rs  task12.rs  task13.rs  task14.rs  task15.rs  task16.rs  task17.rs  task18.rs  task19.rs  task2.rs  task20.rs  task21.rs  task22.rs  task23.rs  task24.rs  task3.rs  task4.rs  task5.rs  task6.rs  task7.rs  task8.rs  task9.rs  Лабораторная работа 5.docx  Лабораторная работа №2. Шифрование в PGSQL.docx  Лабораторная работа №3. Аудит.docx  Лабораторная работа №4. Резервное копирвание в PGSQL.docx  Лабораторная работа №5. Разграничение прав доступа.docx
src/: main.rs
