[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = "0.3"
